--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -110,7 +110,10 @@ header {
   position: relative;
   z-index: 1;
 
-  margin: 5% 5% 0 5%;
+  /* margin: 5% 5% 0 5%; */
+  margin: auto;
+  /* top: -2vw; */
+
   width: 38%;
 
   color: var(--first-color);
@@ -121,11 +124,17 @@ header {
   flex-direction: column;
 }
 
+.splash-content, .splash-content * {
+  transition: 350ms;
+}
+
 .splash-content h1 {
-  position: relative;
+  /* position: relative; */
+  position: absolute;
 
   margin: 0 0 0 0;
-  margin-top: -0.88em;
+  /* margin-top: -0.88em; */
+  /* margin-top: -7vw; */
 
   width: 5em;
   font-size: 8vw;
@@ -141,6 +150,8 @@ header {
 }
 
 .splash-content h1:last-of-type {
+  position: relative;
+  margin-top: 0;
   margin-bottom: -0.2em;
 
   color: var(--first-color);
@@ -236,16 +247,19 @@ header {
 
   position: relative;
 
-  margin: 12% 2% 0 10%;
+  /* margin: 12% 2% 0 10%; */
+  margin: auto;
+  /* top: 3.5vw; */
 
   max-width: 40%;
   height: 50vh;
+  min-height: 25vw;
 
   background-color: var(--first-background-light);
   color: var(--first-color);
 
   border-radius: 20px 0;
-  overflow: hidden
+  overflow: hidden;
 }
 
 .featured-title {
@@ -327,7 +341,11 @@ header {
   /* flex-shrink: 0; */
   top: 0;
   width: 100%;
-  height: 75%
+  height: 75%;
+
+  object-fit: cover;
+
+  border-radius: 0 0 0 20px;
 }
 
 .featured-stars {
@@ -391,4 +409,18 @@ header {
   color: var(--first-color);
 
   /* text-shadow: 0 0 4px rgba(0 0 0 / 90%); */
+}
+
+/*  */
+/* ANIMATIONS */
+/*  */
+
+@keyframes slide-outside-from-right {
+  from {
+    right: 0%;
+  }
+
+  to {
+    right: -200%;
+  }
 }
