--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -124,7 +124,8 @@ header {
   flex-direction: column;
 }
 
-.splash-content, .splash-content * {
+.splash-content,
+.splash-content * {
   transition: 350ms;
 }
 
@@ -332,7 +333,7 @@ header {
 
   display: flex;
   flex-wrap: wrap;
-  /* justify-content: center; */
+  justify-content: center;
   /* align-items: center; */
   overflow: hidden;
 }
@@ -349,7 +350,7 @@ header {
 }
 
 .featured-stars {
-  width: 100%;
+  /* width: 100%; */
   height: 12.5%;
   display: flex;
   justify-content: space-between;
@@ -357,12 +358,16 @@ header {
 }
 
 .featured-stars .star-rating {
+  position: relative;
+
   flex: 1;
   text-align: center;
 
-  font-size: 3vw;
+  text-wrap: nowrap;
 
-  -webkit-text-stroke-width: 1px;
+  font-size: 2.5vw;
+
+  -webkit-text-stroke-width: 0.8px;
   -webkit-text-stroke-color: var(--first-color);
   color: transparent;
 
@@ -375,12 +380,48 @@ header {
 
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
+
+  cursor: pointer;
+}
+
+.star-rating::before {
+  opacity: 0;
+
+  content: attr(data-content);
+
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -100%);
+
+  background-color: var(--second-color);
+
+  padding: 2px 16px;
+  border-radius: 16px;
+
+  color: var(--first-color);
+
+  background-clip: unset;
+  -webkit-background-clip: unset;
+  -moz-background-clip: unset;
+
+  -webkit-text-fill-color: var(--first-color);
+  -moz-text-fill-color: var(--first-color);
+
+  transition: 200ms;
+}
+
+.star-rating:hover::before {
+  opacity: 1;
 }
 
 .featured-stars .featured-ratings {
   font-size: 1em;
   padding-right: 8px;
   text-align: center;
+
+  font-size: 1em;
+
+  width: 25%;
 }
 
 .featured-nav {
