--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -333,7 +333,7 @@ header {
 
 .featured-text {
   pointer-events: none;
-  
+
   width: 50%;
 
   font-size: 1.2em;
@@ -341,7 +341,7 @@ header {
 
 .featured-text p {
   pointer-events: visible;
-  
+
   padding: 0 8px;
 }
 
@@ -389,6 +389,8 @@ header {
 
 .featured-side .featured-img {
   display: flex;
+
+  width: 100%;
   height: 75%;
 
   overflow: hidden;
@@ -407,7 +409,7 @@ header {
 
 .featured-side .img-overlay {
   z-index: 102;
-  display: block;
+  display: none;
 
   position: relative;
   flex-shrink: 0;
@@ -611,5 +613,40 @@ header {
 
   100% {
     background-position: 100%;
+  }
+}
+
+/*  */
+/* ASPECTRATIO ASPECT RATIO */
+/*  */
+@media (max-aspect-ratio: 6/5) {
+  header {
+    flex-direction: column;
+  }
+
+  .splash-content h1 {
+      font-size: 17.5vw;
+  }
+
+  .splash-content h2 {
+    font-size: 4.3vw;
+}
+
+  .splash-content {
+    width: 85%;
+    margin-top: 35vw;
+    margin-bottom: 0;
+  }
+
+  .splash-featured {
+    max-width: 85%;
+    margin-top: 4vw;
+    margin-bottom: 1vh;
+
+    height: 100%;
+  }
+
+  .featured-stars .star-rating {
+    font-size: 4.5vw;
   }
 }
