--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -102,6 +102,7 @@ header {
   background-image: url("../img/splash_anime_food_2048x1152.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position-x: center;
   transform: translateZ(-1px) scale(1.1);
   z-index: -100;
 }
