--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -650,10 +650,15 @@ header {
   }
 
   .splash-content h1 {
+    text-align: center;
     font-size: 12.5dvw;
+
+    left: 50%;
+    transform: translate(-50%, 0);
   }
 
   .splash-content h2 {
+    text-align: center;
     font-size: 3.6dvw;
   }
 
