--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -281,10 +281,10 @@ header {
   height: 50dvh;
   min-height: 25dvw;
 
-  background-color: var(--first-color);
+  background-color: transparent;
   color: var(--first-color);
 
-  border-radius: 20px 0;
+  border-radius: 20px 5px;
   overflow: hidden;
 
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
@@ -655,11 +655,19 @@ header {
 
     left: 50%;
     transform: translate(-50%, 0);
+
+    margin-left: 0;
+  }
+
+  .splash-content h1:last-of-type {
+    position: absolute;
   }
 
   .splash-content h2 {
     text-align: center;
-    font-size: 3.6dvw;
+    font-size: 3.4dvw;
+
+    margin-top: 14dvw;
   }
 
   .splash-content {
@@ -721,23 +729,6 @@ header {
 /* ASPECTRATIO ASPECT RATIO 2:3 */
 /*  */
 @media (max-aspect-ratio: 2/3) {
-  .splash-content {
-    /* width: 85%; */
-    margin-top: 35dvw;
-  }
-
-  .splash-content h1 {
-    /* font-size: 17.5dvw; */
-  }
-
-  .splash-content h2 {
-    /* font-size: 4.3dvw; */
-  }
-
-  .splash-featured {
-    /* width: 85%; */
-  }
-
   .splash-featured .featured-side {
     background: linear-gradient(to bottom, var(--first-background) 20px, transparent 20px);
   }
