trying fix for side panel shadow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -277,6 +277,7 @@ header {
 
   /* width: 40%; */
   width: 50%;
+  height: 100%;
 
   transition: 0ms;
 
@@ -318,7 +319,8 @@ header {
 .splash-featured.duplicate-left,
 .splash-featured.duplicate-right {
   position: absolute;
-  top: 0;
+  top: 50%;
+  bottom: 50%;
 }
 
 .splash-featured.duplicate-left {
