--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -148,10 +148,10 @@ header {
   padding: var(--title-bg-padding);
 
   --title-bg-height: 200dvh;
-  height: var(--title-bg-height);
+  height: calc(var(--title-bg-height) * 2);
   width: 100%;
 
-  top: calc(var(--title-bg-height) / -2);
+  top: calc(var(--title-bg-height) * -1);
   left: calc(-1 * var(--title-bg-padding));
 
   background-color: var(--third-color);
@@ -827,6 +827,17 @@ header {
 
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: var(--first-color);
+  }
+
+  footer {
+    z-index: 1000;
+    position: relative;
+
+    margin: auto;
+
+    width: 60%;
+
+    color: var(--first-color);
   }
 }
 
