--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -102,7 +102,7 @@ header {
 }
 
 .splash-parallax {
-  position: absolute;
+  position: fixed;
   inset: 0;
   transition: 0s;
   /* overflow: hidden;
@@ -119,7 +119,7 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   background-position-x: center;
-  transform: translateZ(-1px) scale(1.1);
+  /* transform: translateZ(-1px) scale(1.1); */
   z-index: -100;
 }
 
@@ -846,6 +846,8 @@ header {
 
     background: var(--third-color);
     padding: var(--title-bg-padding);
+
+    text-align: center;
   }
 }
 
