--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,7 +20,7 @@ html {
 
 body {
   position: relative;
-  
+
   padding: 0;
   margin: 0;
 
@@ -28,7 +28,8 @@ body {
 
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 
-  height: 100dvh; /* sus? */
+  height: 100dvh;
+  /* sus? */
 }
 
 .stop-scrolling {
@@ -633,6 +634,26 @@ header {
   animation-timing-function: ease-in;
 }
 
+/*  */
+/* FOOTER */
+/*  */
+footer {
+  z-index: 1000;
+  position: relative;
+
+  margin: auto;
+  top: calc(-1 * var(--nav-height));
+
+  width: calc(40% - var(--title-bg-padding));
+
+  color: var(--first-color);
+
+  background: var(--third-color);
+  padding: var(--title-bg-padding);
+
+  text-align: center;
+}
+
 @keyframes nav-button-glow {
   from {
     text-shadow: 0 0 0px var(--first-color), 0 0 0px var(--first-color), 0 0 0px var(--first-color);
@@ -717,6 +738,47 @@ header {
 
   100% {
     background-position: 100%;
+  }
+}
+
+/*  */
+/* ASPECTRATIO ASPECT RATIO DESKTOP */
+/*  */
+@media (min-aspect-ratio: 6/5) {
+  body {
+    overflow: hidden;
+  }
+
+  footer {
+    position: absolute;
+
+    display: flex;
+    justify-content: flex-end;
+
+    top: 100dvh;
+
+    width: 100%;
+    overflow: hidden;
+
+    padding: 0;
+
+    background-color: transparent;
+
+    transition: 500ms;
+  }
+
+  .footer-container {
+    margin-right: 5%;
+
+    width: 40%;
+
+    background-color: var(--first-background);
+
+    border-radius: 20px 5px;
+  }
+
+  .footer-content {
+    padding: 5px;
   }
 }
 
