--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,6 +17,9 @@ html {
 
   --global-perspective: 100dvw;
   --global-perspective-origin: 75%;
+
+  --mobile-nav-margin: calc(var(--title-bg-padding) / 4);
+  --mobile-nav-width: calc(80px - var(--mobile-nav-margin) * 2);
 }
 
 /* * {
@@ -389,7 +392,7 @@ header {
   transform: rotate3d(1, 0, 0, 0deg);
 
   -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .splash-featured {
@@ -920,12 +923,38 @@ footer {
   margin: auto;
 
   background-color: var(--first-background-light);
+
+  color: var(--first-color);
+}
+
+.recipe-ingredients {
+  width: 100%;
+}
+
+.recipe-ingredients table {
+  width: 100%;
+}
+
+.recipe-ingredients td {
+  padding: 8px;
+
+  border-color: var(--first-background);
+  border-width: 1px;
+  border-style: dashed;
+}
+
+.recipe-ingredients table tr:nth-child(even) {
+  background-color: var(--first-background);
 }
 
 /*  */
 /* ASPECTRATIO ASPECT RATIO 6:5 */
 /*  */
 @media (max-aspect-ratio: 6/5) {
+  body {
+    height: auto;
+  }
+
   nav {
     /* flex-direction: column;
     align-items: flex-end; */
@@ -937,8 +966,8 @@ footer {
 
     position: relative;
 
-    --mobile-nav-margin: calc(var(--title-bg-padding) / 4);
-    --mobile-nav-width: calc(80px - var(--mobile-nav-margin) * 2);
+    /* --mobile-nav-margin: calc(var(--title-bg-padding) / 4);
+    --mobile-nav-width: calc(80px - var(--mobile-nav-margin) * 2); */
 
     width: var(--mobile-nav-width);
     /* height: var(--mobile-nav-width); */
@@ -1174,7 +1203,22 @@ footer {
   }
 
   header.mini-header {
-    height: 25dvh;
+    height: calc(var(--nav-height) + var(--mobile-nav-margin) * 2);
+  }
+
+  .splash-content-container.mini-header {
+    height: 0;
+    width: 100%;
+  }
+
+  .splash-content.mini-header {
+    top: calc(-0.5 * var(--nav-height) + var(--mobile-nav-margin));
+    /* top: calc(-1 * var(--mobile-nav-margin)); */
+  }
+
+  .splash-content.mini-header h1 {
+    margin: auto;
+    margin-left: calc(-4 * var(--mobile-nav-margin));
   }
 
   .splash-content-container {
@@ -1314,41 +1358,45 @@ footer {
   
     background-color: var(--first-background-light); */
     position: relative;
-  
+
     top: calc(-2 * var(--title-bg-padding));
     padding: 0;
     width: 100%;
     margin: auto;
-  
+
     background-color: var(--first-background-light);
   }
 
   .recipe {
-    display: flex;
-    flex-wrap: wrap;
+    /* display: flex;
+    flex-wrap: wrap; */
   }
 
   .recipe h1 {
     width: 100%;
 
     margin: 0;
-    
+
     background-color: var(--first-background);
     padding: var(--title-bg-padding);
   }
 
   .recipe-info {
-    width: 50%;
+    width: 100%;
   }
 
   .recipe-image {
-    width: 50%;
+    width: 100%;
+    
   }
 
   .recipe-image img {
     position: relative;
     flex-shrink: 0;
+    
     width: 100%;
+    height: 100dvw;
+
     object-fit: cover;
   }
 
